<resources>
    <string name="app_name">EXADEMY</string>
    <string name="pick_goal">Pick a goal</string>
    <string name="UPSE_CSE">UPSC CSE</string>
    <string-array name="nav_course">
        <item>UPSC CSE</item>
        <item>JEE MAINS</item>
        <item>JEE ADVANCE</item>
        <item>CA</item>
        <item>CS</item>
    </string-array>
    <string-array name="profile_course">
        <item>UPSC CSE</item>
        <item>JEE MAINS</item>
        <item>JEE ADVANCE</item>
        <item>CA</item>
        <item>CS</item>
    </string-array>
    <string name="home_fragment">Home Fragment</string>
    <string name="my_library_fragment">My Library Fragment</string>
    <string name="plus_fragment">Plus Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="star">\u2605</string>
    <string name="bullet">\u2022</string>
    <string name="march_18">Mar\n18</string>
    <string name="overview">This website www.exademy.in is operated by Exademy Education (About us). Throughout the site, the terms “we”, “us” and “our” refer to Exademy Education. Exademy Education offers this website, including all information, tools and services available from this site to you, the user, conditioned upon your acceptance of all terms, conditions, policies and notices stated here.

By visiting our site and/ or purchasing something from us, you engage in our “Service” and agree to be bound by the following terms and conditions (“Terms of Service”, “Terms”), including those additional terms and conditions and policies referenced herein and/or available by hyperlink. These Terms of Service apply to all users of the site, including without limitation users who are browsers, vendors, customers, and/ or contributors of content.

Please read these Terms of Service carefully before accessing or using our website. By accessing or using any part of the site, you agree to be bound by these Terms of Service. If you do not agree to all the terms and conditions of this agreement, then you may not access the website or use any services. If these Terms of Service are considered an offer, acceptance is expressly limited to these Terms of Service.

Any new features or tools which are added to the current website shall also be subject to the Terms of Service.</string>
    <string name="WebsiteandOnlineCourseUsageTerms">By agreeing to these Terms of Service, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.

You may not use our products for any illegal or unauthorized purpose nor may you, in the use of the service, violate any laws in your jurisdiction (including but not limited to copyright laws).

You must not transmit any worms or viruses or any code of a destructive nature.

A breach or violation of any of the Terms will result in an immediate termination of your Services.</string>
    <string name="GeneralConditions">We reserve the right to refuse service to anyone for any reason at any time.

You understand that your content (not including credit card information), may be transferred unencrypted and involve (a) transmissions over various networks; and (b) changes to conform and adapt to technical requirements of connecting networks or devices. Credit card information is always encrypted during transfer over networks.

You agree not to reproduce, duplicate, copy, sell, resell or exploit any portion of the service, use of the service, or access to the service or any contact on the website through which the service is provided, without express written permission by us.

The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.

 </string>
    <string name="AccuracyCompletenesandTimelinessofInformation">We are not responsible if information made available on this site is not accurate, complete or current. The material on this site is provided for general information only. It should not be relied upon or used as the sole basis for making decisions without consulting primary, more accurate, more complete or timelier sources of information. Any reliance on the material on this site is at your own risk.

This site may contain certain historical information. Historical information, necessarily, is not current and is provided for your reference only. We reserve the right to modify the contents of this site at any time, but we have no obligation to update any information on our site. You agree that it is your responsibility to monitor changes to our site.</string>
    <string name="ModificationstotheServiceandPrices">Prices for our classroom courses, study material, online courses and other products and services are subject to change without notice.

We reserve the right at any time to modify or discontinue the service (or any part or content thereof) without notice at any time.

We shall not be liable to you or to any third-party for any modification, price change, suspension or discontinuance of the service.

 </string>
    <string name="ProductsorServices">Certain products or services including our online courses and eBooks may be available exclusively online through the website or our partner websites. These products or services may have limited quantities and are subject to return or exchange only according to our Return Policy.

We reserve the right, but are not obligated, to limit the sales of our products or Services to any person, geographic region or jurisdiction. We may exercise this right on a case-by-case basis. We reserve the right to limit the quantities of any products or services that we offer. All descriptions of products or product pricing are subject to change at anytime without notice, at our sole discretion. We reserve the right to discontinue any product at any time. Any offer for any product or service made on this site is void where prohibited.

We do not warrant that the quality of any products, services, information, or other material purchased or obtained by you will meet your expectations, or that any errors in the service will be corrected.</string>
    <string name="AccuracyofBillingandAccountInformation">We reserve the right to refuse any order you place with us. We may, in our sole discretion, limit or cancel quantities purchased per person, per household or per order. These restrictions may include orders placed by or under the same customer account, the same credit card, and/or orders that use the same billing and/or shipping address. In the event that we make a change to or cancel an order, we may attempt to notify you by contacting the e-mail and/or billing address/phone number provided at the time the order was made. We reserve the right to limit or prohibit orders that, in our sole judgment, might meet certain criteria that we think might harm our business interests.

You agree to provide current, complete and accurate purchase and account information for all purchases made at our site. You agree to promptly update your account and other information, including your email address and credit card numbers and expiration dates, so that we can complete your transactions and contact you as needed.</string>
    <string name="OptionalTools">We may provide you with access to third-party tools over which we neither monitor nor have any control nor input.

You acknowledge and agree that we provide access to such tools ”as is” and “as available” without any warranties, representations or conditions of any kind and without any endorsement. We shall have no liability whatsoever arising from or relating to your use of optional third-party tools.

Any use by you of optional tools offered through the site is entirely at your own risk and discretion and you should ensure that you are familiar with and approve of the terms on which tools are provided by the relevant third-party provider(s).

We may also, in the future, offer new services and/or features through the website (including, the release of new tools and resources). Such new features and/or services shall also be subject to these Terms of Service.</string>
    <string name="Copyright">The copyright in the User Content on Exademy Platform are owned by publishers, where Exademy is a limited license holder to publish the same on Exademy Platform. The User Content is subject to the various Terms and Conditions and other policies (together “Terms”) as provided on the Exademy Platform, kindly ensure that you use the User Content only within the parameters as provided in the Terms. You are prohibited from using the User Content as your own without the prior permission of the content creator and Exademy.

Exademy Content on the Exademy Platform including but not limited to, images, graphics, process, images, software, graphics, are owned by or licensed to Exademy and subject to Copyright and you are prohibited from using the same as your own, without the prior permission of Exademy. For clarity, Exademy Content does not include User Content.

If you believe that any Publisher/User has used copyright-protected work in the User Content posted on the Exademy Platform, an option to report the User Content is provided and you can report the same by using the report button or if you believe your or someone else’s copyrights are being infringed upon through the Exademy Platform, then let us know by writing to us at team.exademy@gmail.com

Please note that by claiming copyright infringement you are initiating a legal process, kindly be sure to consider whether fair use, fair dealing, or a similar exception to copyright apply before you report.</string>
    <string name="Trdemark">The trademarks, service marks, logos displayed on the Exademy Platform are owned by Exademy (“Exademy Marks”). If you haven’t received our permission, do not use the Exademy Marks as your own or in any manner that implies sponsorship or endorsement or any relation to Exademy.

A product or service branded with the Exademy name or logo is a reflection of Exademy. Unless you are one of our licensees, we don’t allow others to make, sell, or give away anything with our name or logo on it.</string>
    <string name="Censorship">Trolling, submitting self-promotional links or computer-generated spam, or posting sexually-explicit or violent material. However, these practices often overlap with the more general terms of service violations &amp; Exademy will take legal action upon breaching any rule.

By becoming a user of any Exademy Educational platform, you agree to the Exademy terms of service, which are the rules of how a user should conduct themselves on the site. When users violate Exademy terms of service, the company can remove your account for any reason without giving you prior notice. Additionally, Exademy has the authority to change or alter their terms of service at any time without informing users.

Terms of service violations are not only important because they allow for the removal of content from a website, but the violations also trigger the Computer Abuse and Fraud Act .</string>
    <string name="OfficialLegalNotices">In the event of any other disputes or claims arising from the use of the Exademy Platform, please get in touch with us at team.exademy@gmail.com .</string>
    <string name="Tableofcontent">\t1. Copyright \n\n\t2. Trademark\n\n\t3. Censorship\n\n\t4. Official Legal Notices</string>
    <string name="full_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
</resources>