<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exademy.sidenav.LegalTerms">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="Legal Terms"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Table of Contents :"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Tableofcontent"
            android:textColor="#2D70DF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="1. Copyright"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="35sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/Copyright"
            android:textAlignment="textStart"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="2. Trdemark"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="35sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/Trdemark"
            android:textAlignment="textStart"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="3. Censorship"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="35sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/Censorship"
            android:textAlignment="textStart"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="4. Official Legal Notices"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="35sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/OfficialLegalNotices"
            android:textAlignment="textStart"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</ScrollView>